# SimilarPicsAI

./: .gitignore  README.md  build_env.sh  env.sh  main.py  pyproject.toml
src/: api.py
tests/: test_api.py
tutorials/quickstart/: quickstart.ipynb
