[build-system]
requires = ["poetry-core>=1.0.0"]  # Базовый движок Poetry
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "similarpics"
version = "0.1.0"
description = "Search similar images on your disk."
package-mode = false  # не собираем пакет

[tool.poetry.dependencies]
python = "^3.10"  # Фиксируем версию Python
fastapi = "^0.95.0"
pymilvus = "^2.2.0"
torchvision = { version = "^0.15.0", optional = true }  # Если нужно CPU-only
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"  # Тесты (опционально)
mypy = "^1.5.0"    # Статическая проверка типов
