[project]
name = "similarpics"
version = "0.1.0"
description = "Search similar images on your disk."
authors = [
    { name = "Sergey Tushev", email = "sergy5@mail.ru" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }  # или другой тип лицензии
keywords = ["images", "similarity", "search"]

dependencies = [
    "fastapi>=0.95.0",
    "pymilvus>=2.2.0",
    "pillow>=10.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
]
torch = ["torchvision>=0.15.0"]  # Опциональная зависимость

[project.urls]
Homepage = "https://github.com/sergy5/similarpics"
Repository = "https://github.com/sergy5/similarpics.git"

[tool.ruff]
line-length = 120
select = [
    "E",  # PEP 8
    "F",  # Ошибки
    "I",  # Импорты
    "B",  # Баги
    "D",  # Документация (pydocstyle)
    "W",  # Предупреждения
    "UP", # Модернизация кода
]
